--- a/A1_index.html
+++ b/A1_index.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Devansh Shah">
     <title>Devansh Shah - Home</title>
-    <link rel="stylesheet" href="../CSS/A1_design.css">
+    <link rel="stylesheet" href="A1_design.css">
     <!-- The head section includes metadata such as character encoding, viewport settings for responsiveness, the title of the web page, and a link to an external CSS file for styling the webpage -->
 </head>
 
