--- a/A1_index.html
+++ b/A1_index.html
@@ -48,7 +48,7 @@
                 <!-- This sub-section within the header introduces Devansh Shah with his name and titles/roles, providing a quick overview of his professional identity -->
             </div>
             <div class="devansh-image-box">
-                <img src="../Images/1..jpg" alt="Devansh Shah" class="devansh-image">
+                <img src="1..jpg" alt="Devansh Shah" class="devansh-image">
                 <!-- This div contains the profile image of Devansh Shah -->
             </div>
         </header>
