--- a/A1_projects.html
+++ b/A1_projects.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Devansh Shah">
     <title>Devansh Shah - Projects</title>
-    <link rel="stylesheet" href="../CSS/A1_design.css">
+    <link rel="stylesheet" href="A1_design.css">
     <!-- The head section includes metadata such as character encoding, viewport settings for responsiveness, the title of the web page, and a link to an external CSS file for styling the webpage -->
 </head>
 
@@ -53,7 +53,7 @@
                 <p>This is a UI which is carefully built by analyzing the company needs and wants also while keeping in mind the company's target audience. A thorough research of the competition was also a part of this project. Proper surveys were conducted with real audience to know what is best for the website.</p>
                 <p>Date Completed: August 2023</p>
                 <p>Technologies Used: Microsoft PowerPoint Presentation, Figma, Adobe Illustrator, Canva, Wix Studios</p>
-                <img src="../Images/p1.png" alt="Project 1 Image">
+                <img src="p1.png" alt="Project 1 Image">
                 <!-- This sub-section provides details about the first project, including its title, description, completion date, technologies used, and an image associated with the project -->
             </div>
 
@@ -63,7 +63,7 @@
                 <p>This is a Mid Fidelity Prototype of an application which has all the trailers of older movies and also publish trailers for new movies. This was made for a corporation who has a chain of multiscreening cinema halls.</p>
                 <p>Date Completed: December 2023</p>
                 <p>Technologies Used: Figma, Google Presentation, Adobe Illustrator, Krita, Coursera</p>
-                <img src="../Images/p2.png" alt="Project 2 Image">
+                <img src="p2.png" alt="Project 2 Image">
                 <!-- This sub-section provides details about the second project, including its title, description, completion date, technologies used, and an image associated with the project -->
             </div>
 
@@ -73,7 +73,7 @@
                 <p>This Java project takes some bank account information from the user and helps them deposit or withdraw some money from their bank account. This program also helps the user calculate their bank deposits after they make changes and withdraw or deposit money.</p>
                 <p>Date Completed: June 2024</p>
                 <p>Technologies Used: Eclipse, Java 17, draw.io, UMLET</p>
-                <img src="../Images/p3.png" alt="Project 3 Image">
+                <img src="p3.png" alt="Project 3 Image">
                 <!-- This sub-section provides details about the third project, including its title, description, completion date, technologies used, and an image associated with the project -->
             </div>
 
@@ -83,7 +83,7 @@
                 <p>This Database Management System has Forms and Reports as well as queries connected to each other through well planned and calculated relations in order to provide the rentals transaction process smoothly. The management system was completely functioned and the entities were Normalized to BC NF to get rid of any anomalies in the database.</p>
                 <p>Date Completed: June 2024</p>
                 <p>Technologies Used: Micsrosoft Access 2019, MySQL Workbench, Google Docx, Draw.io, SSMS</p>
-                <img src="../Images/p4.jpg" alt="Project 4 Image">
+                <img src="p4.jpg" alt="Project 4 Image">
                 <!-- This sub-section provides details about the fourth project, including its title, description, completion date, technologies used, and an image associated with the project -->
             </div>
             <!-- This entire section encapsulates all the projects -->
@@ -108,7 +108,7 @@
         <p>Devansh Shah 2024 Copyright</p>
     </footer>
 
-    <script src="../JavaScript/A1_functions.js"></script>
+    <script src="A1_functions.js"></script>
     <!-- Links to an external JavaScript file for additional functionality -->
 
 </body>
